--- a/qml.qrc
+++ b/qml.qrc
@@ -65,5 +65,9 @@
         <file>issue_report_1.qml</file>
         <file>issue_report_2.qml</file>
         <file>Menu/shareBtn.png</file>
+        <file>multi_ac.qml</file>
+        <file>Menu/multi_ac.png</file>
+        <file>multi_acc_add.qml</file>
+        <file>Menu/wt_cross.png</file>
     </qresource>
 </RCC>
